updated READMEs and scripts for building jar files
the Windows script still needs to be tested